# disneyscanindex

./: Dockerfile  README.md  addissue.php  addissue_submit.php  addissue_web_form.php  class.php  config_sample.php  datalist.php  docker-compose.yml  gunicorn.conf.py  launcher.sh  manage.py  pyproject.toml  scanindex.php
disneyscanindex/: asgi.py  settings.py  urls.py  wsgi.py
js/: addissue_web_form.js  searchlink.php  validate_issue_code.php
nginx/: nginx.conf
opds/: apps.py  opds.py  urls.py  views.py
scans/: admin.py  api_helper.py  file_converter.py  loader.py  models.py  thumbnail.py  urls.py  views.py
scans/management/commands/: export_cover.py  find_scans.py  get_year.py  lookup_issuecode.py
scans/templates/scans/: base.html  navbar.html  publication.html  publications.html  renumber.html
sql/: create_disneyscanindex_tables.sql
